added patients button and id entry filed to .xml file